src/test/deca/syntax/valid/declMethod-returnSubClassThis.deca
class A {
    Object getMyself() {
        return this;
    }
}
