src/test/deca/syntax/invalid/return-invalidExpr.deca
class Toto {
    boolean quiEstToto() {
        return instanceof;
    }
}